--- a/Rapport/Rapport_UGEGreed.tex
+++ b/Rapport/Rapport_UGEGreed.tex
@@ -227,7 +227,12 @@ Si dans le terminal il y est marqué autre chose que ces deux dernières command
 \item Nous n'avons pas changé les clés valeurs de la table de routage par les Contextes comme demandé car nous n'en n'avons pas eu le temps, nous préférions nous concentrer sur les autres aspect du code que nous trouvions bien plus importante
 \item La déconnexion d'une application interne et re-connexion de ses fils vers l'application supérieur
 \end{itemize}
-
+\paragraph{Ce qui à été supprimé depuis la Beta car plus d'utilité}
+\begin{itemize}
+\item Trame First Root : Comme lorsque l'on se connecte on envoi un buffer vers la Root pour prévenir d'update la table de routage on a plus besoin de demander a la Root de ping pour recevoir les données pour update la table de routage.
+\item Trame New Leaf : La trame First Leaf s'occupe de faire ce qui etait sensé  fait avec la Trame New Leaf
+\item placer les données a traiter dans un buffer, on a mis dans des champs à la place
+\end{itemize}
 \subsection{Maniere de traiter}
 \subsubsection{L'analyseur de trames (dans la classe Application)}
 \begin{lstlisting}
@@ -237,22 +242,43 @@ void analyseur(Trame tramez) throws IOException {
 	case 3 -> {
 		var tmp3 = (TrameAnnonceIntentionDeco) tramez;
 		var appDeco = tmp3.dda().AddressSrc();
-		var daronApp = tmp3.dda().AddressDst();	
+		var daronApp = tmp3.dda().AddressDst();
+		table.deleteRouteTable(appDeco);
+		table.removeKeyFromValue(appDeco);
 		if(daronApp.equals(localInet)) {
-				System.out.println("aefaefaefaefaef" + appDeco);
-				table.deleteRouteTable(appDeco);
+			System.out.println("JE SUIS TON PERE");
 				var doa = new DataOneAddress(5,appDeco);
 				TrameSuppression supp = new TrameSuppression(doa);
 				broadCastWithoutFrom((InetSocketAddress) recu.getRemoteAddress(), supp);
+				
 				var dda = new DataDoubleAddress(4,localInet,appDeco);
 				var trameConfirmation  = new TramePingConfirmationChangementCo(dda);
 				var context = getContextFromSocket(recu);
 				context.queueTrame(trameConfirmation);
 		}
 		else {
-			System.out.println("C'est mon pere"+scDaron.getRemoteAddress());
-			if(table.get(appDeco).equals(scDaron.getRemoteAddress())) {
-				System.out.println("NONNN C4EST IMPOSSIBLE");
+			if(table.get(appDeco).equals(scDaron.getRemoteAddress())) {					
+				var beauDaron = scDaron.getRemoteAddress();
+				scDaron.close();
+				scDaron = SocketChannel.open();
+				System.out.println("open");
+				selector = Selector.open();
+				scDaron.configureBlocking(false);
+				scDaron.register(selector, SelectionKey.OP_CONNECT);					
+				scDaron.connect(daronApp);
+				System.out.println("MON DARON: " + scDaron.getRemoteAddress());
+						//table.removeKeyFromValue((InetSocketAddress) beauDaron);
+				var doa = new DataALotAddress(7,new ArrayList<InetSocketAddress>(Arrays.asList(localInet)));
+				var dda = new DataDoubleAddress(4,localInet,(InetSocketAddress) beauDaron);
+				var trm = new TramePingConfirmationChangementCo(dda);
+				var trme = new TrameFirstLeaf(doa);
+				daronContext.queueTrame(trm);
+				selector.wakeup();					
+				if(!isroot) {
+					daronContext.queueTrame(trm);
+					selector.wakeup();
+					System.out.println("ENVOI");
+				}
 			}
 		}
 	}
@@ -272,7 +298,9 @@ void analyseur(Trame tramez) throws IOException {
 	case 5 -> {
 		var tmp5 = (TrameSuppression) tramez;
 		var addressDeco = tmp5.doa().Address();
+		table.removeKeyFromValue(addressDeco);
 		table.deleteRouteTable(addressDeco);
+		broadCastWithoutFrom((InetSocketAddress) recu.getRemoteAddress(),tramez);
 		if(isroot) {
 			var list = table.getAllAddress();
 			list.add(localInet);
@@ -291,17 +319,18 @@ void analyseur(Trame tramez) throws IOException {
 				if(!reseau.contains(listo.get(i))) {
 					reseau.add(listo.get(i));
 				}
-			}
+			}	
 		}
 		if(!isroot) {//pas root
 			if(connexions.size()!=1){
+				System.out.println( listo.removeIf(e -> e.equals(localInet)));
 				listo.add(localInet);
 				var ndla = new DataALotAddress(7,listo);
 				var trm = new TrameFirstLeaf(ndla);
 				daronContext.queueTrame(trm);
-			}
+			}	
 		}
-		else {
+		else {//root
 			var list = new ArrayList<>(reseau);
 			list.add(localInet);
 			var ndla = new DataALotAddress(8, list);
@@ -316,29 +345,28 @@ void analyseur(Trame tramez) throws IOException {
 		table.removeKeyIf(listz);
 		for(int i = 0; i != listz.size(); i++){
 			if(!listz.get(i).equals(localInet)) {
-				table.addToRouteTable(listz.get(i),(InetSocketAddress) recu.getRemoteAddress());
+				table.addToRouteTable(listz.get(i),(InetSocketAddress) recu.getRemoteAddress());		
 				if(reseau.contains(listz.get(i))) {
 					reseau.add(listz.get(i));
 				}
-			}
+			}		
 		}
 		if(!isroot && connexions.size() > 1){
 			listz.removeIf(e -> e.equals(localInet));
 			listz.add(localInet);
 			var ndla = new DataALotAddress(8, listz);
 			var trm = new TrameFullTree(ndla);
-			broadCastWithoutFrom((InetSocketAddress)scDaron.getRemoteAddress(),trm);
+			broadCastWithoutFrom((InetSocketAddress)scDaron.getRemoteAddress(),trm); //A verifier avec le broadcast
 		}
 	}
 	case 10 -> {
-		TramePingEnvoi tmp = (TramePingEnvoi) tramez;
+		TramePingEnvoi tmp = (TramePingEnvoi) tramez; // A verif
 		var address = tmp.doa().Address();
 		if(connexions.size() > 1) {
 			broadCastWithoutFrom((InetSocketAddress) recu.getRemoteAddress(),tramez);
 			selector.wakeup();
 		}
 		DataResponse dr;
-		
 		if(bufferDonnee.position() != 0 || dispo!=null) {
 			dispo = address;
 			dr = new DataResponse(11,localInet,address,false);
@@ -348,13 +376,13 @@ void analyseur(Trame tramez) throws IOException {
 		var trm = new TramePingReponse(dr);
 		var con = getContextFromSocket(recu);
 		con.queueTrame(trm);
-		selector.wakeup();
+		selector.wakeup();	
 	}
 	case 11 -> {
 		var tmp11 = (TramePingReponse) tramez;
 		var addressSrc = tmp11.dr().addressSrc();
 		var addressDest = tmp11.dr().addressDst();
-		var resp = tmp11.dr().boolByte();
+		var resp = tmp11.dr().boolByte();		
 		if(!addressDest.toString().equals(localInet.toString().replace("localhost", ""))) {
 			broadCastWithoutFrom((InetSocketAddress) recu.getRemoteAddress(),tramez);
 		}else {
@@ -365,11 +393,10 @@ void analyseur(Trame tramez) throws IOException {
 			}
 			if(resp == true) {
 				if(commande.computeIfPresent(addressSrc, (k,v) -> v = true)==null){
-					commande.put(addressSrc,true);
+				commande.put(addressSrc,true);
 				}
 			}
-			System.out.println("ICI -------------------------------> \n"+commande);
-		}
+		}				
 	}
 	default -> {
 		return;
@@ -677,18 +704,18 @@ private void processCommands() {
 \item Trame FullTree : Que la root renvoi à tout le monde pour mettre à jour les tables de routages par le haut
 \item Trame Ping Envoi : Qui permet de verifier si une application est disponible
 \item Trame Ping Réponse : En réponse à la trame ping Envoi répond si l'application actuelle est disponible( donc n'as pas de taches)
+\item Déconnexion d'une application et re-connexion des application enfant à l'application père de l'application.
 \end{itemize}
 
 \subsection{Fonctionnel Partiellement ou pas entièrement implémenté}
 \begin{itemize}
-\item Trame  d'envoi des données aux applications en attente
-\item Trame d'envoi des données de déconnexion à traiter aux applications connexes
+\item Trame  d'envoi des données aux applications en attente (pas implémenté)
+\item Trame d'envoi des données de déconnexion à traiter aux applications connexes(pas implémenté)
 \item Traitement des Checkers : cette partie n'a pas encore été intégré au code mais cela fonctionne a part.
-\item Deconnexion, on peut déconnecter une feuille et la table de routage de toute le réseau se change mais pour l'instant la déconnexion d'une application qui n'est pas une feuille ne fonctionne pas encore.
+\item Reconnexion d'une application a une autre lors de la déconnexion de son père.
 \end{itemize}
 \subsection{Non Fonctionnel}
 \begin{itemize}
-\item Reconnexion d'une application a une autre lors de la déconnexion de son père.
 \item Convertion du projet en JAR
 \end{itemize}
 
