--- a/Rapport/Rapport_UGEGreed.tex
+++ b/Rapport/Rapport_UGEGreed.tex
@@ -18,7 +18,7 @@
 	language={c},
 	breaklines=true,
 	numberstyle=\footnotesize,
-	captionpos=b,
+	captionpos=b,²
 	basicstyle=\ttfamily,
 	keywordstyle=\bfseries\color{blue},
 	commentstyle=\itshape\color{green}
